--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,9 @@ body {
   height: 100vh;
   background-color: hsl(185, 41%, 84%);
 }
+
+body a{
+  position: absolute;
+  bottom: 0;
+  left: 40vw;
+}
